@@ -230,6 +230,8 @@ Pagar (GtkWidget *widget, gpointer data)
         saldo_caja = ReturnSaldoCaja ();
       */
 
+
+
       if (gtk_toggle_button_get_active (togglebutton) == TRUE)
         {
           descrip = g_strdup_printf ("%s %s %s %s",
@@ -2303,22 +2305,7 @@ IngresarCompra (gboolean invoice)
                       0, &id,
                       -1);
 
-  if (products != NULL)
-    {
-      do {
 
-        IngresarProducto (products->product, id);
-
-        IngresarDetalleDocumento (products->product, id, n_document, invoice);
-
-        products = products->next;
-      }
-      while (products != compra->header);
-
-      //      SetProductosIngresados ();
-
-    }
-  //TODO: usar funcion plpgsql
   q = g_strdup_printf ("SELECT proveedor FROM get_proveedor_compra( %d )", id);
   rut_proveedor = GetDataByOne (q);
   g_free (q);
@@ -2329,6 +2316,7 @@ IngresarCompra (gboolean invoice)
       g_date_set_parse (date, gtk_entry_get_text (GTK_ENTRY (builder_get (builder, "entry_ingress_factura_date"))));
 
       doc = IngresarFactura (n_document, id, rut_proveedor, total_doc, g_date_get_day (date), g_date_get_month (date), g_date_get_year (date), 0);
+
     }
   else
     {
@@ -2338,6 +2326,21 @@ IngresarCompra (gboolean invoice)
       doc = IngresarGuia (n_document, id, total_doc, g_date_get_day (date), g_date_get_month (date), g_date_get_year (date));
     }
 
+  if (products != NULL)
+    {
+      do {
+
+        IngresarProducto (products->product, id);
+
+        IngresarDetalleDocumento (products->product, id, doc, invoice);
+
+        products = products->next;
+      }
+      while (products != compra->header);
+
+      //      SetProductosIngresados ();
+
+    }
 
   CompraIngresada ();
 
@@ -3392,7 +3395,7 @@ AddFactura (void)
 {
   PGresult *res;
 
-  GtkTreeModel *model = gtk_tree_view_get_model (GTK_TREE_VIEW (gtk_builder_get_object (builder, "tree_view_guide_invoice")));
+  //  GtkTreeModel *model = gtk_tree_view_get_model (GTK_TREE_VIEW (gtk_builder_get_object (builder, "tree_view_guide_invoice")));
   GtkTreeIter iter;
 
   gchar *guia;
