@@ -967,6 +967,7 @@ IngresarDetalleDocumento (Producto *product, gint compra, gint doc, gboolean fac
 {
   PGresult *res;
   gchar *cantidad;
+  gchar *q;
   gdouble iva = 0, otros = 0;
 
   iva = (gdouble) (product->precio_compra * product->cantidad) *
@@ -979,19 +980,22 @@ IngresarDetalleDocumento (Producto *product, gint compra, gint doc, gboolean fac
 
   cantidad = CUT (g_strdup_printf ("%.2f", product->cantidad));
 
-  if (product->perecible == TRUE)
-    res = EjecutarSQL
-      (g_strdup_printf
-       ("INSERT INTO documentos_detalle (id, numero, id_compra, barcode, cantidad, precio, fecha, factura, elaboracion, vencimiento, iva, otros) "
-        "VALUES (DEFAULT, %d, %d, '%s', %s, %s, NOW(), '%d', NULL, to_timestamp ('%.2d %.2d %.4d', 'DD MM YYYY'), %ld, %ld)",
-        doc, compra, product->barcode, cantidad, CUT (g_strdup_printf ("%.2f", product->precio_neto)),
-        (gint)factura, product->venc_day, product->venc_month, product->venc_year, lround (iva), lround (otros)));
+  if (factura)
+    {
+      q = g_strdup_printf
+        ("INSERT INTO factura_compra_detalle (id, id_factura_compra, barcode, cantidad, precio, iva, otros) "
+         "VALUES (DEFAULT, %d, %s, %s, '%s', '%d', %ld, %ld)",
+         doc, product->barcode, cantidad, CUT (g_strdup_printf ("%.2f", product->precio_neto)),(gint)factura, lround (iva), lround (otros));
+    }
   else
-    res = EjecutarSQL
-      (g_strdup_printf
-       ("INSERT INTO documentos_detalle (id, numero, id_compra, barcode, cantidad, precio, fecha, factura, elaboracion, vencimiento, iva, otros) "
-        "VALUES (DEFAULT, %d, %d, '%s', %s, %s, NOW(), '%d', NULL, NULL, %ld, %ld)",
-        doc, compra, product->barcode, cantidad, CUT (g_strdup_printf ("%.2f", product->precio_neto)),(gint)factura, lround (iva), lround (otros)));
+    {
+      q = g_strdup_printf
+        ("INSERT INTO guias_compra_detalle (id, id_guias_compra, barcode, cantidad, precio, iva, otros) "
+         "VALUES (DEFAULT, %d, %s, %s, '%s', '%d', %ld, %ld)",
+         doc, product->barcode, cantidad, CUT (g_strdup_printf ("%.2f", product->precio_neto)),(gint)factura, lround (iva), lround (otros));
+    }
+
+  res = EjecutarSQL (q);
 
   if (res != NULL)
     return TRUE;
@@ -1477,7 +1481,8 @@ IngresarGuia (gint n_doc, gint id_compra, gint total, gint d_emision, gint m_emi
 {
   PGresult *res;
 
-  res = EjecutarSQL (g_strdup_printf ("INSERT INTO guias_compra VALUES (DEFAULT, %d, %d, 0, (SELECT rut_proveedor FROM compra WHERE id=%d), "
+  res = EjecutarSQL (g_strdup_printf ("INSERT INTO guias_compra (id, numero,l id_compra, id_factura, rut_proveedor, fecha_emision) "
+                                      "VALUES (DEFAULT, %d, %d, 0, (SELECT rut_proveedor FROM compra WHERE id=%d), "
                                       "to_timestamp('%.2d %.2d %.2d', 'DD MM YY'))",
                                       n_doc, id_compra, id_compra, d_emision, m_emision, y_emision));
 
